--- a/Index.html
+++ b/Index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http equiv="X-UA-Compatible"content ="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <link rel="stylesheet" href="style.css">
-    <title>Ryan-Lee's Robinson</title>
+    <title>Ryan-Lee Robinsons Portfolio</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul class="navbar_links">
-            <li><a href="#">Home</li>
-            <li><a href="#">About me</li>
-            <li><a href="#f">Projects</a></li>
-        
-        </ul>
-        </nav>
-        <a class = "cta" href = "#"><button>Contact</button></a>
-    </header>
 
-    <footer>
+<nav id="main-nav">
+    <div class="container">
+        <label class = "logo">DesignX</label>
         <ul>
-            <li>Ryan-Lee Robinson</li>
+            <li><a class = "active" href="#">Home</a></li>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Projects</a></li>
         </ul>
-    </footer>
+    </div>
+</nav>
+    
 </body>
+</html>
